cambio de nombre de archivos

--- a/verReclamos.html
+++ b/verReclamos.html
@@ -58,12 +58,12 @@
     </nav>
 
     <main>
-      <div id="formularioEnviado"></div>
+      <div id="verReclamos"></div>
       <div id="map" style="height: 250px"></div>
     </main>
 
-    <script src="formularioEnviado.js" type="module"></script>
-    <!-- 
+    <script src="verReclamos.js" type="module"></script>
+    <!--
     <script
       async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBqGsWsVcJtl2FJLJXujdhEP0X9cij96eg&callback=iniciarMap"
