Conexion al backend en vez de a firebase

--- a/cargaReclamos.html
+++ b/cargaReclamos.html
@@ -85,7 +85,7 @@
         <br />
         <br />
         <label>
-          Carga una imagen que represente tu reclamo!
+          Carga una imagen que represente tu reclamo
           <input type="file" name="imagenReclamo" id="imagenReclamo" />
         </label>
         <br />
@@ -97,7 +97,7 @@
         </label>
         <br />
         <br />
-        <button type="submit">Enviar formulario</button>
+        <button type="submit">Crear reclamo</button>
       </form>
     </main>
 
@@ -107,5 +107,6 @@
       integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
